research team done

--- a/co.html
+++ b/co.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X_UA_Compartible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ColCo</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/hero.css" />
-    <link rel="stylesheet" href="css/home.css" />
+    <title>Research</title>
     <link rel="icon" href="image/bean_icon.png" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/ml.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/hero.css">
   </head>
   <body>
     <header>
@@ -38,118 +38,40 @@
           </div>
       </nav>
   </header> 
-    <section class="ml">
-      <div class="ml-content">
-        <h1 style="text-align: center; font-weight: bold; margin-bottom: 10px;">Colombia Team</h1>
-      </div>
-    </section>
-
-    <section class="intro">
-      <div class="intro-content">
-        <p>
-            As students on an international research trip to Colombia, our interdisciplinary fieldwork examines small-scale farming in the Coffee region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to digitize and map data, creating visualizations of crop distribution and environmental patterns related to cocoa plants. By integrating field-collected data with GIS tools, our work provides valuable insights that serve as a foundational resource for decision-making. Our research leverages computer science to develop a deep-learning-based image detection program that aids international farmers in diagnosing and managing crop diseases, using image-processing techniques and data collected from Colombia. Utilizing the GIS and image detection data, we can conduct a thorough biological analysis offering clear insights into farmers' crops and showcasing ways to optimize their crop growth. This opportunity fosters collaboration with Colombian farmers, promoting cross-cultural exchange while advancing farming techniques, utilizing GIS, and promoting sustainability.  
-        </p>
-        <title>Meet the Teams</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #15372c;
-      color: white;
-      margin: 0;
-      padding: 0;
-    }
-
-    .team {
-      text-align: center;
-      margin-top: 40px;
-    }
-
-    .team h2 {
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-
-    .team-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px; /* Space between rows */
-    }
-
-    .row {
-      display: flex;
-      justify-content: center;
-      gap: 20px; /* Space between team members */
-    }
-
-    .team-member {
-      width: 150px;
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 10px;
-      background-color: white;
-      color: black;
-      text-align: center;
-    }
-
-    .team-member .image-placeholder {
-      height: 100px;
-      background-color: #f0f0f0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-
-    .team-member p {
-      margin: 0;
-      font-weight: bold;
-    }
-  </style>
-    <section class="team" style="text-align: center; margin-top: 20px;">
-        <h2 style="font-weight: bold;">Meet the Teams</h2>
-        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;"></div>
-    <div class="team-container">
-      <!-- First Row -->
-      <div class="row">
-        <div class="team-member">
-          <div class="image-placeholder">
-            <span>IMG</span>
-          </div>
-          <p>Yash Pansheriya</p>
+  <section>
+    <div class="hero">
+        <svg class="svg-lg" viewBox="0 0 1440 539" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M-1 539C-1 539 309.631 479.916 511.172 478.137C712.713 476.358 817.305 524.355 994.45 512.182C1171.59 500.01 1451 431.149 1451 431.149V0H-1V539Z" fill="#023F3A"/>
+        </svg>
+        <svg class="svg-sm" viewBox="0 0 430 160" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 160C0 160 91.9911 142.461 151.676 141.933C211.361 141.405 242.336 155.653 294.796 152.039C347.256 148.426 430 127.985 430 127.985V0H0V160Z" fill="#023F3A"/>
+        </svg>
+            
+        <div class="float-text">
+            <h1>Colombia Research Team</h1>
+            <p>Research involves meeting farmers in Colombia and collected necessary data for the project.
+            </p>
         </div>
-        <div class="team-member">
-          <div class="image-placeholder">
-            <span>IMG</span>
-          </div>
-          <p>Viola Kuehl-jeberg</p>
-        </div>
-        <div class="team-member">
-          <div class="image-placeholder">
-            <span>IMG</span>
-          </div>
-          <p>Reachael Gilmore</p>
-        </div>
-      </div>
-      <!-- Second Row -->
-      <div class="row">
-        <div class="team-member">
-          <div class="image-placeholder">
-            <span>IMG</span>
-          </div>
-          <p>Denise Pacheco</p>
-        </div>
-        <div class="team-member">
-          <div class="image-placeholder">
-            <span>IMG</span>
-          </div>
-          <p>Kristine Morquecho</p>
-        </div>
-      </div>
     </div>
   </section>
 
+  <section class="about mt-2 p-4">
+    <h2 class="text-center mb-4">About Us</h2>
+    <div class="row align-items-center pt-0 pl-4 pr-4">
+      <div class="mb-4">
+        <p>
+          As students on an international research trip to Colombia, our interdisciplinary fieldwork examines small-scale farming 
+          in the Coffee region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to 
+          digitize and map data, creating visualizations of crop distribution and environmental patterns related to cocoa plants. By 
+          integrating field-collected data with GIS tools, our work provides valuable insights that serve as a foundational resource 
+          for decision-making. The collected data will be used by other teams working on this project to develop a deep-learning-based
+          disease detection model and conduct a thorough biological analysis offering clear insights into farmers' crops and 
+          showcasing ways to optimize their crop growth. This opportunity fosters collaboration with Colombian farmers, promoting 
+          cross-cultural exchange while advancing farming techniques, utilizing GIS, and promoting sustainability.  
+        </p>
+      </div>
+    </div>
+  </section>
     <footer class="footer2" style="color: white; text-align: center;">
       <p>&copy; 2024 ColCo. All Rights Reserved.</p>
     </footer>
