--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="team-card position-relative">
                 <img src="image/cocoa_plant.jpg" />
                   <div class="card-body position-absolute">
-                      <h3 class="card-title">Colombia Team</h3>
+                      <h3 class="card-title">Colombia Research</h3>
                       <p class="card-text">International relations and research</p>
                   </div>
               </div></a>
@@ -178,7 +178,7 @@
               <form class="contact-form">
                   <div class="form-group">
                       <label for="email" class="font-weight-bold">Email</label>
-                      <input type="email" class="form-control" id="email" placeholder="pat@shuffle.dev">
+                      <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
                   </div>
                   <div class="form-group">
                       <label class="font-weight-bold" for="message">Message</label>
