--- a/trial.html
+++ b/trial.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/home.css" />
     <link rel="icon" href="image/bean_icon.png" />
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -38,28 +38,16 @@
           </div>
       </nav>
   </header> 
-  <section>
-    <div class="hero">
-        <svg class="svg-lg" viewBox="0 0 1440 737" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 736.683C0 736.683 308.277 638.338 508.292 635.378C708.306 632.417 812.106 712.307 987.909 692.045C1163.71 671.784 1441 557.167 1441 557.167V0H0V736.683Z" fill="#023F3A"/>
-            </svg>
-            
-        <svg class="svg-sm" viewBox="0 0 430 289" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 289C0 289 91.9911 250.419 151.676 249.258C211.361 248.096 242.336 279.437 294.796 271.489C347.256 263.54 430 218.576 430 218.576V0H0V289Z" fill="#023F3A"/>
-        </svg>
-            
-        <div class="float-text">
-          <h1>Experience the Future - Trial Coming Soon</h1>
+  <section style="background-color: #023F3A; height: 100vh; color: white;">
+    <div class="hero">            
+        <div class="p-5" cla>
+          <h1 class="pt-5">Experience the Future - Trial Coming Soon</h1>
           <p>Thank you for your interest in ColCo! We're excited to introduce our advanced machine learning tool for detecting 
             plant diseases with ease and precision. Stay tuned for our trial version.
         </p>
         </div>
     </div>
   </section>
-  <section class="container" style="height: 502px;">
-
-  </section>
-
   <footer class="footer2" style="color: white; text-align: center;">
     <p>&copy; 2024 ColCo. All Rights Reserved.</p>
   </footer>
