--- a/teams.html
+++ b/teams.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <header>
+        <div class="construction-banner" id="constructionBanner">
+            This website is under construction. Some features may not work as expected. Thank you for your patience!
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="#">
