--- a/trial.html
+++ b/trial.html
@@ -13,6 +13,9 @@
   </head>
   <body style="overflow: hidden;">
     <header>
+    <div class="construction-banner" id="constructionBanner">
+        This website is under construction. Some features may not work as expected. Thank you for your patience!
+    </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
               <a class="navbar-brand logo" href="#">
