data collection team done

--- a/data.html
+++ b/data.html
@@ -69,60 +69,39 @@
             supports sustainable farming practices and increases crop yields.
         </p>
       </div>
-      <div class="col-md-6 text-center mb-3">
-        <h4>Healthy Cocoa Pod</h4>
-        <img src="image/healthy.png" alt="Healthy Cocoa Pods" class="img-fluid rounded">
-        <p>Healthy cocoa pods exhibit uniform color, smooth texture, and no signs of lesions.</p>
-      </div>
-      <div class="col-md-6 text-center mb-3">
-          <h4>Diseased Cocoa Pod (Fito)</h4>
-          <img src="image/fito.png" alt="Diseased Cocoa Pods" class="img-fluid rounded">
-          <p>Diseased cocoa pods display discoloration, rough texture, and visible signs of lesions.</p>
-      </div>
     </div>
   </section>
 
-  <section class="how-it-works mt-2 p-4">
-    <h2 class="text-center mb-4">How It Works</h2>
-    <div class="row align-items-center pt-0 pl-4 pr-4">
+  <section class="how-it-works mb-4 p-4">
+    <h2 class="text-center mb-4">Features</h2>
+    <div class="row align-items-center pt-0 pl-4 pr-4" >
       <div class="col-md-4 step">
-          <div class="team-card position-relative">
-          <img src="image/tree.jpg" />
-            <div class="card-body position-absolute step-info">
-                <h3 class="card-title">Step 1</h3>
-                <p class="card-text">Capture the image</p>
+          <div class="team-card">
+            <div class="card-body step-info" style="color: black !important; height: auto !important;">
+                <h3 class="card-title">Sensor Network</h3>
+                <p class="card-text">Deploy sensors to track 
+                    temperature, humidity, and soil moisture in real-time.</p>
             </div>
           </div>
       </div>
       <div class="col-md-4 step">
-          <div class="team-card position-relative">
-            <img src="image/tree.jpg" />
-              <div class="card-body position-absolute step-info">
-                  <h3 class="card-title">Step 2</h3>
-                  <p class="card-text">Upload to software</p>
+          <div class="team-card">
+              <div class="card-body step-info" style="color: black !important; height: auto !important;">
+                  <h3 class="card-title">Predictive Analysis</h3>
+                  <p class="card-text">Analyze data to identify patterns 
+                    and predict potential risks.</p>
               </div>
           </div>
       </div>
       <div class="col-md-4 step">
-          <div class="team-card position-relative">
-            <img src="image/tree.jpg" />
-              <div class="card-body position-absolute step-info">
-                  <h3 class="card-title">Step 3</h3>
-                  <p class="card-text">Get the results</p>
+          <div class="team-card">
+              <div class="card-body step-info" style="color: black !important; height: auto !important;">
+                  <h3 class="card-title">Informative Maps</h3>
+                  <p class="card-text">Visualize data on maps to highlight 
+                    areas needing attention.</p>
               </div>
           </div>
       </div>
-    </div>
-  </section>
-
-  <section class="mt-2 p-4"  id="prototype">
-    <h2 class="text-center mb-4">Results & Demo</h2>
-    <div class="containerd-flex justify-content-center">
-      <div class="prototype text-center">
-          <img src="image/tree.jpg" alt="Website Prototype">
-          <p>Demo of the ColCo interface</p>
-      </div>
-    </div>
     </div>
   </section>
     <footer class="footer2" style="color: white; text-align: center;">
