--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </a>
             </div>
             <div class="col-md-4">
-              <a href="diseaseDetection.html">
+              <a href="data.html">
                 <div class="team-card position-relative">
                   <img src="image/sensor.jpg" />
                     <div class="card-body position-absolute">
