--- a/trial.html
+++ b/trial.html
@@ -20,7 +20,7 @@
           <div class="container-fluid">
               <a class="navbar-brand logo" href="#">
                   <img src="image/bean_icon.png" alt="Logo" />
-                  <span>ColCo</span>
+                  <span>ColCo</span>s
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
