--- a/diseaseDetection.html
+++ b/diseaseDetection.html
@@ -88,7 +88,7 @@
     <div class="row align-items-center pt-0 pl-4 pr-4">
       <div class="col-md-4 step">
           <div class="team-card position-relative">
-          <img src="image/tree.jpg" />
+          <img src="image/black_pod_edit.jpg" />
             <div class="card-body position-absolute step-info">
                 <h3 class="card-title">Step 1</h3>
                 <p class="card-text">Capture the image</p>
@@ -97,7 +97,7 @@
       </div>
       <div class="col-md-4 step">
           <div class="team-card position-relative">
-            <img src="image/tree.jpg" />
+            <img src="image/upload.jpg" />
               <div class="card-body position-absolute step-info">
                   <h3 class="card-title">Step 2</h3>
                   <p class="card-text">Upload to software</p>
@@ -106,7 +106,7 @@
       </div>
       <div class="col-md-4 step">
           <div class="team-card position-relative">
-            <img src="image/tree.jpg" />
+            <img src="image/results.png" />
               <div class="card-body position-absolute step-info">
                   <h3 class="card-title">Step 3</h3>
                   <p class="card-text">Get the results</p>
