--- a/teams.html
+++ b/teams.html
@@ -142,7 +142,9 @@
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
-                <div class="member-image"></div>
+                <div class="member-image">
+
+                </div>
                 <h4>Deekshitha Chavalla</h4>
                 <p>Computer Science Student</p>
             </div>
@@ -166,14 +168,16 @@
                 <p>(Major) Student</p>
             </div>
             <div class="team-member">
-                <div class="member-image"></div>
+                <div class="member-image">
+                    <img src="#">
+                </div>
                 <h4>Reachael Gilmore</h4>
-                <p>(Major) Student</p>
+                <p>Environmental Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
                 <h4>Denise Pacheco</h4>
-                <p>(Major) Student</p>
+                <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
@@ -238,4 +242,3 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
