--- a/teams.html
+++ b/teams.html
@@ -165,11 +165,10 @@
             <div class="team-member">
                 <div class="member-image"></div>
                 <h4>Viola Kuehl-jeberg</h4>
-                <p>(Major) Student</p>
+                <p>Geography Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image">
-                    <img src="#">
                 </div>
                 <h4>Reachael Gilmore</h4>
                 <p>Environmental Science Student</p>
@@ -182,7 +181,7 @@
             <div class="team-member">
                 <div class="member-image"></div>
                 <h4>Kristine Morquecho</h4>
-                <p>(Major) Student</p>
+                <p>Biology Student</p>
             </div>
         </div>
     </section>
