--- a/teams.html
+++ b/teams.html
@@ -168,9 +168,7 @@
                 <p>Geography Student</p>
             </div>
             <div class="team-member">
-                <div class="member-image">
-                </div>
-                <h4>Reachael Gilmore</h4>
+                <h4>Rachael Gilmore</h4>
                 <p>Environmental Science Student</p>
             </div>
             <div class="team-member">
