--- a/teams.html
+++ b/teams.html
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <h4>Mariana Morquecho</h4>
-                <p>Bioinformatics & Computational biology</p>
+                <p>Bioinformatics & Computational biology Student</p>
             </div>
         </div>
     </section>
