--- a/teams.html
+++ b/teams.html
@@ -323,7 +323,7 @@
                         <img src="image/Mariana.jpg" alt="Mariana's profile picture"  />
                     </div>
                 </div>
-                <h4>Mariana Morquecho</h4>
+                <h4>Mariana Candamil</h4>
                 <p>Bioinformatics & Computational biology Student</p>
             </div>
         </div>
