--- a/diseaseDetection.html
+++ b/diseaseDetection.html
@@ -72,12 +72,12 @@
       </div>
       <div class="col-md-6 text-center mb-3">
         <h4>Healthy Cocoa Pod</h4>
-        <img src="image/healthy.png" alt="Healthy Cocoa Pods" class="img-fluid rounded">
+        <img src="image/healthy.jpg" alt="Healthy Cocoa Pods" class="img-fluid rounded">
         <p>Healthy cocoa pods exhibit uniform color, smooth texture, and no signs of lesions.</p>
       </div>
       <div class="col-md-6 text-center mb-3">
           <h4>Diseased Cocoa Pod (Fito)</h4>
-          <img src="image/fito.png" alt="Diseased Cocoa Pods" class="img-fluid rounded">
+          <img src="image/colombia_fito.jpg" alt="Diseased Cocoa Pods" class="img-fluid rounded">
           <p>Diseased cocoa pods display discoloration, rough texture, and visible signs of lesions.</p>
       </div>
     </div>
@@ -120,7 +120,7 @@
     <h2 class="text-center mb-4">Results & Demo</h2>
     <div class="containerd-flex justify-content-center">
       <div class="prototype text-center">
-          <img src="image/tree.jpg" alt="Website Prototype">
+          <img src="image/Colombia_photo.jpg" alt="Website Prototype">
           <p>Demo of the ColCo interface</p>
       </div>
     </div>
