--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </section>
   
     <section class="hero-img">
-      <img src="image/cocoa_pods.png" alt="">
+      <img src="image/colombia_cocoa_pod2.jpg" alt="">
     </section>    
 
     <!--Mission section-->
@@ -103,10 +103,10 @@
                 <img src="image/bowl_of_cocoa.jpg" alt="Bowl of Cocoa" class="" style="width: 100%">
               </div>
               <div class="col-6 pr-2">
-                <img src="image/plants.jpg" alt="Plants" class="img-fluid mission-img">
+                <img src="image/Colombia_cocoa_pod.jpeg" alt="Plants" class="img-fluid mission-img">
               </div>
               <div class="col-6 pl-2">
-                <img src="image/cocoa_pods.jpg" alt="Cocoa Pods" class="img-fluid mission-img">
+                <img src="image/coffee_beans_fertilizer.jpg" alt="Cocoa Pods" class="img-fluid mission-img">
               </div>
             </div>
           </div>
@@ -115,12 +115,12 @@
 
     <!-- Meet the Team Section -->
     <section class="team-section container" id="details">
-        <h2 class="text-center mb-5">Agricultural interventions</h2>
+        <h2 class="text-center mb-5">Agricultural Interventions</h2>
         <div class="row">
             <div class="col-md-4">
               <a href="co.html">                
                 <div class="team-card position-relative">
-                <img src="image/cocoa_plant.jpg" />
+                <img src="image/Colombia_Team.png" />
                   <div class="card-body position-absolute">
                       <h3 class="card-title">Colombia Research</h3>
                       <p class="card-text">International relations and research</p>
@@ -144,7 +144,7 @@
                 <div class="team-card position-relative">
                   <img src="image/sensor.jpg" />
                     <div class="card-body position-absolute">
-                        <h3 class="card-title">Data Collection</h3>
+                        <h3 class="card-title">Field Instruments</h3>
                         <p class="card-text">Sensors and GSI Information</p>
                     </div>
                 </div>
