--- a/teams.html
+++ b/teams.html
@@ -111,7 +111,7 @@
                 <div class="member-image">
                     <span class="overlay"></span>
                     <div class="card-image">
-                        <img src="image/missing_profile.jpg" alt="Victoria's profile picture"  />
+                        <img src="image/victoria.jpg" alt="Victoria's profile picture"  />
                     </div>
                 </div>
                 <h4>Victoria Miteva</h4>
