--- a/co.html
+++ b/co.html
@@ -64,7 +64,7 @@
       <div class="mb-4">
         <p>
           As students on an international research trip to Colombia, our interdisciplinary fieldwork examines small-scale farming 
-          in the Coffee region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to 
+          in the region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to 
           digitize and map data, creating visualizations of crop distribution and environmental patterns related to cocoa plants. By 
           integrating field-collected data with GIS tools, our work provides valuable insights that serve as a foundational resource 
           for decision-making. The collected data will be used by other teams working on this project to develop a deep-learning-based
