--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="col-md-4">
               <a href="diseaseDetection.html">
                 <div class="team-card position-relative">
-                  <img src="image/plant-ml.jpg" />
+                  <img src="image/Cocoa_pods_web.jpg" />
                     <div class="card-body position-absolute">
                         <h3 class="card-title">Disease Detection</h3>
                         <p class="card-text">ML and Image Processing</p>
@@ -142,7 +142,7 @@
             <div class="col-md-4">
               <a href="data.html">
                 <div class="team-card position-relative">
-                  <img src="image/sensor.jpg" />
+                  <img src="image/radio_tower.jpg" />
                     <div class="card-body position-absolute">
                         <h3 class="card-title">Field Instruments</h3>
                         <p class="card-text">Sensors and GSI Information</p>
