--- a/teams.html
+++ b/teams.html
@@ -131,7 +131,7 @@
                 <div class="member-image">
                     <span class="overlay"></span>
                     <div class="card-image">
-                        <img src="image/missing_profile.jpg" alt="Ricky's profile picture"  />
+                        <img src="image/ricky.jpg" alt="Ricky's profile picture"  />
                     </div>
                 </div>
                 <h4>Ricky Malagon</h4>
@@ -325,6 +325,43 @@
                 </div>
                 <h4>Mariana Candamil</h4>
                 <p>Bioinformatics & Computational biology Student</p>
+            </div>
+            <div class="team-member">
+                <div class="member-image">
+                    <span class="overlay"></span>
+                    <div class="card-image">
+                        <img src="image/Juan.jpg" alt="Juan's profile picture"  />
+                    </div>
+                </div>
+                <h4>Juan Martín Betancur Uribe</h4>
+                <p>Systems Engineering Student</p>
+            </div>
+        </div>
+    </section>
+    <!--Faculty Advisors-->
+    <section class="team">
+        <h3>Faculty Advisors</h3>
+        <hr class="line-break" />
+        <div class="team-grid container d-flex justify-content-center">
+            <div class="team-member">
+                <div class="member-image">
+                    <span class="overlay"></span>
+                    <div class="card-image">
+                        <img src="image/Jhon.jpg" alt="Jhon's profile picture"  />
+                    </div>
+                </div>
+                <h4>Jhon Fredy Betancur Perez</h4>
+                <p>PhD in Agricultural Sciences</p>
+            </div>
+            <div class="team-member">
+                <div class="member-image">
+                    <span class="overlay"></span>
+                    <div class="card-image">
+                        <img src="image/PhDBio.jpg" alt="???'s profile picture"  />
+                    </div>
+                </div>
+                <h4></h4>
+                <p>PhD in Molecular Biology</p>
             </div>
         </div>
     </section>
